# metalForge

./: Cargo.toml  README.md
config/: device_registry.toml  remediation_playbooks.toml
crates/metalforge-cli/: Cargo.toml
crates/metalforge-cli/src/: cli.rs  main.rs
crates/metalforge-probes/: Cargo.toml
crates/metalforge-probes/src/: executor.rs  lib.rs  registry.rs  ssh.rs
crates/metalforge-probes/src/dhcp/: lease_audit.rs  mod.rs
crates/metalforge-probes/src/dns/: dot_chain.rs  mod.rs  resolution.rs
crates/metalforge-probes/src/network/: mod.rs  port_probe.rs  topology_sweep.rs
crates/metalforge-probes/src/wifi/: flint2.rs  mod.rs
crates/metalforge-probes/src/wireguard/: handshake.rs  mesh_reachability.rs  mod.rs
crates/metalforge-types/: Cargo.toml
crates/metalforge-types/src/: device.rs  inventory.rs  lib.rs  probe.rs  registry.rs  remediation.rs
