# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

cellmembrane-types = { path = "../cellMembrane/crates/cellmembrane-types" }
metalforge-types = { path = "crates/metalforge-types" }
metalforge-probes = { path = "crates/metalforge-probes" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "warn"
use_self = "warn"
doc_markdown = "warn"
must_use_candidate = "warn"
module_name_repetitions = "allow"
option_if_let_else = "warn"
