# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "metalforge-probes"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Hardware topology probe implementations for metalForge"

[dependencies]
metalforge-types = { workspace = true }
cellmembrane-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
