# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "metalforge-types"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Typed domain models for metalForge: probes, devices, remediation, hardware inventory"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
